# Helios-Print-On-Demand-Automation-System

./: Dockerfile  PRODUCTION_READINESS.md  PSYCHOLOGY_INTEGRATION_STATUS.md  Procfile  Procfile.agents  README.md  SYSTEM_STATUS_REPORT.md  TEST_REPORT.md  ai_agents.py  app.py  app.yaml  check_system_status.py  cleanup_project.sh  deployment_debug.py  helios_agent_specifications.md  helios_system_config.json  main.py  orchestrator.py  production-trigger.yaml  pyproject.toml  requirements-ai.txt  requirements.in  requirements.txt  run_ai_agents.py  run_orchestrator.py  setup.py  simple_diagnostics.py  staging-trigger.yaml  start_ai_agents.py  start_orchestrator.py  startup.py  test-payload.json  test_cloud_run_local.py  test_full_psychology_integration.py  test_fully_autonomous_system.py  test_google_cloud_compliance.py  test_helios_system.py  test_hybrid_ai_system.py  test_imports.py  test_minimal_service.py  (+2 more)
agents/: Dockerfile  Procfile  pyproject.toml  requirements.in  requirements.txt
agents/src/helios_agents/: __init__.py
deployment/: CI_CD_SETUP.md  ai_agent.env.example
deployment/agents/: Procfile
deployment/cloud_run/: cloudbuild-trigger.yaml  cloudbuild.yaml
deployment/monitoring/: alert-policy.yaml  budget-alert.yaml  uptime-check.yaml
deployment/orchestrator/: Procfile  requirements.txt  server_ai_agents.py
deployment/orchestrator/agents/: ethics.py
deployment/orchestrator/services/: autonomous_workflow.py
deployment/run/agents/: Dockerfile  Procfile  logging_config.py  project.toml  requirements.txt  server_ai_agents.py
deployment/run/orchestrator/: Dockerfile  Procfile  project.toml  pyproject.toml  requirements.txt  server_orchestrator.py
helios/: __init__.py  config.py  logging_config.py  main.py  server_ai_agents.py  server_orchestrator.py
helios/agents/: autonomous_trend_discoverer.py  ceo.py  creative.py  creative_director.py  hybrid_ai_base.py  marketing_copywriter.py  psychology_integrator.py  publisher_agent.py  trend_analysis_ai.py  zeitgeist.py
helios/config/: api_config.py
helios/designer/: text_art.py
helios/providers/: etsy.py  google_drive.py
helios/server_ai_agents/: __init__.py  main.py
helios/server_orchestrator/: __init__.py  main.py
helios/services/: __init__.py  automated_trend_discovery.py  helios_orchestrator.py  product_generation_pipeline.py  real_time_data_gatherer.py  supplier_vetting.py
helios/services/external_apis/: image_generation.py  printify_client.py
helios/trends/: google_trends.py
helios/utils/: history.py  jsonio.py
helios/workflows/: autonomous_discovery.py
orchestrator/: Dockerfile  Procfile  pyproject.toml  requirements.in  requirements.txt
orchestrator/src/helios_orchestrator/: __init__.py
reports/audit/: audit_report_20250819_154548.md  audit_report_20250819_154759.md
scripts/: README.md  setup.sh
scripts/audit/: api_audit.sh  api_audit_results.json  compute_audit.sh  compute_audit_results.json  container_audit.sh  container_audit_results.json  cost_analysis.sh  cost_analysis_results.json  gcp_audit_runner.sh  project_info.env  security_audit.sh  security_audit_results.json  storage_audit.sh  storage_audit_results.json
scripts/cleanup/: api_cleanup.sh  storage_cleanup.sh
tests/: demo_ai_agent_workflow.py  test_autonomous_workflow.py
tests/unit/: test_trend_analysis_ai.py
(+16 files in other folders)
