[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helios"
version = "1.0.0"
description = "Helios Print-On-Demand Automation System"
requires-python = ">=3.11"
packages = ["helios"]

[tool.setuptools.packages.find]
where = ["."]
include = ["helios*"]
exclude = ["tests*", "deployment*", "scripts*"]
